vbnc/vbnc/tests/Errors/30060-23.vb
Imports System
Class T
    Const M_String As uint32 = "c"
End Class